syntax = "proto3";

option java_multiple_files = true;
option go_package = "github.com/SourceForgery/tachikoma";
option java_outer_classname = "UnsubscribeDataClass";

import "com/sourceforgery/tachikoma/grpc/frontend/common.proto";

package com.sourceforgery.tachikoma.grpc.frontend.unsubscribe;

message UnsubscribeData {
    // The email that wants to unsubscribe
    EmailId email_id = 101;
    // The url where the redirect will go
    string redirect_url = 102;
}

message SignedUnsubscribeData {
    // Data (UnsubscribeData) to be signed by signature
    bytes message = 101;
    // Signature (HMAC SHA-1)
    bytes signature = 102;
}
